--- a/Issues/FAILED-TO-SET-DISPLAY-MODE/23-05-21-ZAQTM.md
+++ b/Issues/FAILED-TO-SET-DISPLAY-MODE/23-05-21-ZAQTM.md
@@ -4,3 +4,6 @@ Steps tried:
 1) Asked for launcher_log.txt
 2) Asked if they have two monitors plugged in due to [this](https://github.com/jrbudda/minecrift/issues/323)
 3) Asked for [win/dxdiag](https://paste.ubuntu.com/p/zsDxDw6VCw/) due to opengl errors in [log](https://paste.ubuntu.com/p/wJBqvm27nt/)
+
+To try:
+- Clean install of drivers
